<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.example.android.nelsonbcfinalversion.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop = "25dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/nelson_color"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cafes"
                android:text="@string/cafes_activity"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dining_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resto_activity"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bars_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bar_clubs_activity"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/attractions_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/attractions_activity"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/nelsonfront"
            android:adjustViewBounds="true"
            android:layout_marginTop = "30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepage_text"
            android:layout_marginTop = "16dp"
            android:layout_marginLeft = "16dp"
            android:layout_marginRight="16dp"
            android:layout_margin = "16dp"
            android:textSize= "20sp"/>

    </LinearLayout>
</ScrollView>